--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="load_loans">Load Loans</string>
     <string name="hide_loans">Hide Loans</string>
     <string name="loan_management">Loan Management</string>
+    <string name="loan_detail">Loan Detail</string>
     <string name="user_name">UserName</string>
     <string name="interest">Interest</string>
     <string name="loan">Loan</string>
